템플릿 중간 commit

--- a/templates/login.html
+++ b/templates/login.html
@@ -28,7 +28,7 @@
                             <button type="submit" class="btn btn-success">
                                 로그인
                             </button>
-                            <button class="btn btn-success" onclick="location.href='register/';">
+                            <button class="btn btn-success" onclick="location.href='/register/';">
                                 회원가입
                             </button>
                         </div>
