static 폴더 include 자바스크립트 수정

--- a/static/css/override.css
+++ b/static/css/override.css
@@ -48,3 +48,5 @@ a {
 a.no-uline { text-decoration:none }
 
 a.noul:hover { text-decoration:none !important }
+
+.navbar-collapse.in { overflow-y: hidden !important; }
