--- a/templates/main.html
+++ b/templates/main.html
@@ -8,7 +8,8 @@
                     <button type="submit" class="btn right" onclick="location.href='/logout/';">로그아웃</button>
             </div>
             <div class="panel-body">
-
+                {% load s3-tags %}
+                {% load_s3 %}
 
             </div>
         </div>
