템플릿 수정

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,16 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <title>KHUropBox</title>
+
+    <script src="/static/js/app.js"></script>
+
     <link href="/static/css/app.css" rel="stylesheet">
     <link href="/static/css/common.css" rel="stylesheet">
     <link href="/static/css/override.css" rel="stylesheet">
     <link href="/static/css/layout.css" rel="stylesheet">
+    <link href="/static/css/filebrowser.css" rel="stylesheet">
+    <link href="/static/css/font-awesome.min.css" rel="stylesheet">
 
-    <script src="/static/js/app.js"></script>
 
 </head>
 <body>
-    {% load s3-tags %}
     <div id="wrapper">
         <div id="page-content-wrapper">
 
