--- a/templates/main.html
+++ b/templates/main.html
@@ -8,6 +8,7 @@
             <div class="panel-heading">
                 {{ request.user.username }}  님 안녕하세요.
                     <button type="submit" class="btn right" onclick="location.href='/logout/';">로그아웃</button>
+                    <button type="submit" class="btn right" onclick="location.href='/blog/';">게시판</button>
             </div>
             <div class="panel-body">
 
