댓글 입력 추가

--- a/templates/commentadd.html
+++ b/templates/commentadd.html
@@ -22,6 +22,7 @@
                     <div class="form-group">
                         <div class="col-md-12">
                             <label for="text">내용</label>
+                            <input type="hidden" name="author" value="{{ request.user.username }}">
                             <textarea id="text" type="text" class="form-control" name="text" required autofocus></textarea>
                         </div>
                     </div>
