--- a/templates/postdetail.html
+++ b/templates/postdetail.html
@@ -36,8 +36,8 @@
                         <div class="panel-body">
                             {% for comment in post.comments.all %}
                                 <div class="comment">
-                                    <div class="date">{{ comment.created_date }}</div>
-                                    <strong>{{ comment.author }}</strong>
+                                    <div class="date">작성일시 {{ comment.created_date }}</div>
+                                    <strong>작성자 {{ comment.author }}</strong>
                                     <p>{{ comment.text|linebreaks }}</p>
                                 </div>
                                 {% empty %}
