--- a/djangoS3Browser/templates/index.html
+++ b/djangoS3Browser/templates/index.html
@@ -161,7 +161,7 @@
             if (file[0].size() > 52428800) // bigger than 50MB
             {
                 var parts = file[0].size() / 5242880;
-                var bucketRegion = 'as-pacific-seoul';
+                var bucketRegion = 'ap-southeast-1';
                 var IdentityPoolId = 'us-west-2:bfca573d-3cfc-42c7-8310-ff9c0218101d';
 
                 // make aws credential
@@ -198,7 +198,7 @@
                 });
 
                 var uploadID = data.UploadId;
-
+                /*
                 params = {
                       //Body: <Binary String>, // needed to be edited
                       Bucket: "khuropbox2015",
@@ -220,6 +220,19 @@
                     filemulti[i].append(data);
                     // divide file into parts as 5MB size
                 }
+                */
+
+                 var params = {
+                  Bucket: "khuropbox2015",
+                  Key: filekey,
+                  UploadId: uploadID
+                 };
+
+                s3.listParts(params, function(err, data) {
+                   if (err) console.log(err, err.stack); // an error occurred
+                   else     console.log(data);           // successful response
+                 });
+                // list parts
 
                 params = {
                     Bucket: "khuropbox2015",
