--- a/djangoS3Browser/templates/index.html
+++ b/djangoS3Browser/templates/index.html
@@ -43,9 +43,6 @@
 {#                        <li><a href="#"><span class="fa fa-upload fa-lg" data-toggle="collapse"#}
 {#                                              data-target="#collapseUpload" title="{% trans "Upload" %}"></span></a>#}
                         </li>
-                        <li><a href="javascript:;" onclick="download_files();"><span class="fa fa-download fa-lg"
-                                                                                     title="{% trans "Download Selected File" %}"></span></a>
-                        </li>
                         <li><a href="javascript:;" onclick="copy_selected_file();"><span class="fa fa-lg fa-files-o"
                                                                                          title="{% trans "Copy Select Files" %}"></span></a>
                         </li>
@@ -66,7 +63,7 @@
                         <ul class="nav navbar-nav">
                             <li><a href="javascript:;" id="top_folder" data-top_folder="-" onclick="back_folder(this);"><span
                                     class="fa fa-chevron-left fa-lg"></span></a></li>
-                            <li class="pb-filemng-active"><a href="javascript:;" onclick="get_files('-');"><span
+                            <li class="pb-filemng-active"><a href="javascript:;" onclick="get_files('{{ root }}');"><span
                                     class="fa fa-home fa-lg"></span></a></li>
                             <li id="current"></li>
                         </ul>
@@ -138,7 +135,7 @@
             </div>
         </div>
     </div>
-    <div id="location" data-location="-"></div>
+    <div id="location" data-location="{{ root }}"></div>
 </div>
 <script>
     +function ($) {
@@ -222,7 +219,7 @@
 <script>
     $(document).ready(function () {
         //$('.progress').hide();
-        get_files("-");
+        get_files("{{ root }}");
     });
 
     var selected_file_list = [];
@@ -289,8 +286,8 @@
                 refresh_folder();
             },
         });
+        location.reload();
     }
-
 
     function delete_file() {
         loc = $('#location').attr("data-location");
@@ -336,7 +333,7 @@
             top_loc = top_loc + loc_array[i] + "/"
         }
         if (1 > top_loc.length) {
-            top_loc = "-"
+            top_loc = "{{ root }}"
         }
         $('#top_folder').attr("data-top_folder", top_loc);
     }
@@ -364,8 +361,7 @@
                         'data-toggle="tooltip" ondrop="drop_file(event)" ondragover="allowDrop_file(event)" ondragstart="dragstart_file(event)" ondragend="dragend_file(event)" draggable="true" title="' + files_list[key].text +
                         '" data-url="' + files_list[key].url + '" data-type="' + files_list[key].type + '">' +
                         '<img src="' + files_list[key].icon + '"/></a>' + '<br />' +
-                        '<p class="pb-filemng-paragraphs" onClick="rename_file_onfocus(this);"  >' + files_list[key].text + '</p>' +
-                        '<input  type="text" class="form-control hidden rename-input" onfocusout="rename_file_onfocusout(this);" value="' + files_list[key].text + '">' +
+                        '<p class="pb-filemng-paragraphs" >' + files_list[key].text + '</p>' +
                         '<span class="fa check-file"></span>' +
                         '<span class="hide location-info">' + main_folder + files_list[key].text + '</span>' +
                         '</div>'
@@ -383,55 +379,6 @@
         }
     }
 
-    {#rename item focus#}
-
-    function rename_file_onfocus(d) {
-        $(d).parent().find('.rename-input').removeClass('hidden');
-        $(d).parent().find('.rename-input').focus();
-        $(d).toggleClass('hidden');
-    }
-
-    {#rename item focusout#}
-
-    function rename_file_onfocusout(d) {
-        var file = $(d).parent().find('.pb-filemng-paragraphs').html();
-        var loc = $('#location').attr("data-location");
-        var new_name = $(d).val();
-        data = {'loc': loc, 'file': file, 'new_name': new_name};
-        $.ajax({
-            url: '{% url "rename_file" %}',
-            type: 'POST',
-            dataType: 'json',
-            data: data,
-            success: function (resultData) {
-                $(d).parent().find('.pb-filemng-paragraphs').html(resultData);
-                $(d).parent().find('.pb-filemng-paragraphs').removeClass('hidden');
-                $(d).toggleClass('hidden');
-            },
-        });
-    }
-
-    function move_file(loc, file_list) {
-        $('#move_file').toggleClass('hidden');
-        $('#paste_file').toggleClass('hidden');
-        data = {'loc': loc, 'file_list': file_list};
-        $.ajax({
-            url: '{% url "move_file" %}',
-            type: 'POST',
-            dataType: 'json',
-            data: data,
-            success: function (resultData) {
-                get_files($('#location').attr("data-location"));
-            },
-        });
-        location.reload();
-    }
-
-
-    function move_selected_file(d) {
-        move_file($('#location').attr("data-location"), copy_selected_file_list);
-    }
-
     {#drag and drop file for move file start#}
 
     function dragstart_file(e) {
@@ -443,13 +390,6 @@
     function dragend_file(e) {
         for (var key in selected_file_list) {
             $("div[title=\"" + selected_file_list[key].slice(1) + "\"]")[0].style.opacity = '1';
-        }
-    }
-
-    function drop_file(e) {
-        e.preventDefault();
-        if ($(e.target).parent().attr("data-type") === 'folder') {
-            move_file("-" + $(e.target).parent().attr("title"), selected_file_list);
         }
     }
 
