--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,6 +7,7 @@
     <title>KHUropBox</title>
 
     <script src="/static/js/app.js"></script>
+    <script src="/static/js/aws-sdk.min.js"></script>
 
     <link href="/static/css/app.css" rel="stylesheet">
     <link href="/static/css/common.css" rel="stylesheet">
