multi part upload

--- a/djangoS3Browser/templates/index.html
+++ b/djangoS3Browser/templates/index.html
@@ -178,7 +178,7 @@
             {
                 var albumBucketName = 'khuropbox';
                 var bucketRegion = 'ap-northeast-2';
-                var IdentityPoolId = 'ap-northeast-2:b9794a61-92de-42ed-b6e9-c6d65fdcfd7c';
+                var IdentityPoolId = '';
 
                 AWS.config.update({
                     region: bucketRegion,
